--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <header>
     <h2>{{pageTitle}}</h2>
-    <a href="/">Home</a><br>
-    <a href="/about">About</a>
+  <p>  <a href="/">Home</a></p>
+    <p><a href="/about">About</a></p>
+    <p><a href="/projects">Projects</a></p>
 </header>
